# PhyMHC

./: .qmllint.ini  CMakeLists.txt  README.md
src/: CMakeLists.txt  datacollection.cpp  datacollection.h  flowmodel.cpp  flowmodel.h  heatermodel.cpp  heatermodel.h  logdatabase.cpp  logdatabase.h  main.cpp  phymhc.cpp  phymhc.h  qtquickcontrols2.conf  reactormodel.cpp  reactormodel.h  resources.qrc  runconfig.cpp  runconfig.h  scalarcalc.cpp  scalarcalc.h  scriptbase.cpp  scriptbase.h
src/chart/: axistag.cpp  axistag.h  customplotitem.cpp  customplotitem.h
src/controllers/: controllerbase.cpp  controllerbase.h  testcontroller.cpp  testcontroller.h
src/icp/: ICPDAS_USBIO.h  USBIO_Comm.h
src/lib/: qcustomplot.cpp
src/libicp/: ICPDAS_USBIO.lib  USBDEV_LIB.lib  libUSBIO_64.so.1.0
src/libicp_lin/: libUSBIO_64.so.1
src/lin_icp/: Global.h  ICPDAS_USBIO.h  ThreadFun.h  Timer.h  USBIO_Device.h  USBIO_Object_Layout.h
src/qml/: ControllerStatus.qml  DataWindow.qml  FlowToVolume.qml  InfoScript.qml  TagChartTest.qml  main.qml
src/qml/mnemo/PhyMHC_mnemo/: PhyMHC_mnemo.qmlproject  PhyMHC_mnemo.qmlproject.qtds  PhyMHC_mnemo.qmlproject.qtds.20b8043  PhyMHC_mnemo.qmlproject.qtds.4013602  qtquickcontrols2.conf
src/qml/mnemo/PhyMHC_mnemo/PhyMHC_mnemoContent/: App.qml  CircularSlider.qml  Cooler.qml  FlowMeterWidget.qml  GasTank.qml  MnemoBase.qml  Reactor.qml  Reactor.qml.autosave  SensorWidget.qml  ShortComboBox.qml  TempWidget.qml  ValveButton.qml
src/win_icp/: USBIO_CSWrapper.h
